separando DTOs de criação e de resposta: Goal